Add optional fixed AF gain to replace AGC in demodulator

--- a/app/src/main/res/layout/rtlsdr_gain.xml
+++ b/app/src/main/res/layout/rtlsdr_gain.xml
@@ -82,4 +82,31 @@
             android:ems="3"
             android:id="@+id/tv_rtlsdr_ifgain"/>
     </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ll_demod_afgain">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="AF Gain"/>
+
+        <SeekBar
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="300"
+            android:id="@+id/sb_demod_afgain" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ems="3"
+            android:id="@+id/tv_demod_afgain"/>
+
+    </LinearLayout>
 </LinearLayout>
