Added 2m and 80m buttons

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,6 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
+    <item android:id="@+id/action_startStop_80m"
+        android:icon="@drawable/ic_action_80m"
+        android:title="@string/action_start_80m"
+        android:orderInCategory="1"
+        app:showAsAction="always" />
+    <item android:id="@+id/action_startStop_2m"
+        android:icon="@drawable/ic_action_2m"
+        android:title= "@string/action_start_2m"
+        android:orderInCategory="1"
+        app:showAsAction="always" />
     <item android:id="@+id/action_startStop"
           android:icon="@drawable/ic_action_play"
           android:title="@string/action_start"
@@ -11,32 +21,32 @@
           android:icon="@drawable/ic_action_demod_off"
           android:title="@string/action_demodulation_off"
           android:orderInCategory="3"
-          app:showAsAction="always" />
+          app:showAsAction="never" />
     <item android:id="@+id/action_setFrequency"
           android:icon="@drawable/ic_action_frequency"
           android:title="@string/action_setFrequency"
           android:orderInCategory="4"
-          app:showAsAction="always" />
+          app:showAsAction="never" />
     <item android:id="@+id/action_setGain"
           android:icon="@drawable/ic_action_gain"
           android:title="@string/action_setGain"
           android:orderInCategory="10"
-          app:showAsAction="ifRoom" />
+          app:showAsAction="never" />
     <item android:id="@+id/action_record"
           android:icon="@drawable/ic_action_record_off"
           android:title="@string/action_recordOff"
           android:orderInCategory="15"
-          app:showAsAction="always" />
+          app:showAsAction="never" />
     <item android:id="@+id/action_bookmarks"
           android:icon="@drawable/ic_action_important"
           android:title="@string/action_bookmarks"
           android:orderInCategory="16"
-          app:showAsAction="always" />
+          app:showAsAction="never" />
     <item android:id="@+id/action_autoscale"
           android:icon="@drawable/ic_action_full_screen"
           android:title="@string/action_autoscale"
           android:orderInCategory="20"
-          app:showAsAction="ifRoom" />
+          app:showAsAction="never" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
